@@ -84,8 +84,20 @@ specifier|public
 class|class
 name|TestNoMergePolicy
 extends|extends
-name|LuceneTestCase
+name|BaseMergePolicyTestCase
 block|{
+DECL|method|mergePolicy
+specifier|public
+name|MergePolicy
+name|mergePolicy
+parameter_list|()
+block|{
+return|return
+name|NoMergePolicy
+operator|.
+name|INSTANCE
+return|;
+block|}
 annotation|@
 name|Test
 DECL|method|testNoMergePolicy
@@ -99,9 +111,8 @@ block|{
 name|MergePolicy
 name|mp
 init|=
-name|NoMergePolicy
-operator|.
-name|INSTANCE
+name|mergePolicy
+argument_list|()
 decl_stmt|;
 name|assertNull
 argument_list|(
