@@ -384,7 +384,7 @@ specifier|public
 class|class
 name|TestSortingMergePolicy
 extends|extends
-name|LuceneTestCase
+name|BaseMergePolicyTestCase
 block|{
 DECL|field|terms
 specifier|private
@@ -583,6 +583,19 @@ argument_list|)
 expr_stmt|;
 return|return
 name|doc
+return|;
+block|}
+DECL|method|mergePolicy
+specifier|public
+name|MergePolicy
+name|mergePolicy
+parameter_list|()
+block|{
+return|return
+name|newSortingMergePolicy
+argument_list|(
+name|sort
+argument_list|)
 return|;
 block|}
 DECL|method|newSortingMergePolicy
@@ -867,10 +880,8 @@ name|iwc2
 operator|.
 name|setMergePolicy
 argument_list|(
-name|newSortingMergePolicy
-argument_list|(
-name|sort
-argument_list|)
+name|mergePolicy
+argument_list|()
 argument_list|)
 expr_stmt|;
 specifier|final
